--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Miscellaneous
+.idea
 *.class
 *.lock
 *.log
@@ -6,7 +7,10 @@
 *.swp
 .buildlog/
 .history
-
+**/.metadata
+**/analysis_options.yaml
+**/*.iml
+**/pubspec.lock
 
 
 # Flutter repo-specific
@@ -40,13 +44,14 @@ analysis_benchmark.json
 .packages
 .pub-preload-cache/
 .pub/
-build/
+**/build/
 flutter_*.png
 linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 
 # Android related
+**/android/
 **/android/**/gradle-wrapper.jar
 .gradle/
 **/android/captures/
@@ -57,7 +62,11 @@ unlinked_spec.ds
 **/android/key.properties
 *.jks
 
+# Web related
+**/web/
+
 # iOS/XCode related
+**/ios/
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
 **/ios/**/*.moved-aside
@@ -88,6 +97,7 @@ unlinked_spec.ds
 **/ios/Runner/GeneratedPluginRegistrant.*
 
 # macOS
+**/macos/
 **/Flutter/ephemeral/
 **/Pods/
 **/macos/Flutter/GeneratedPluginRegistrant.swift
@@ -95,11 +105,13 @@ unlinked_spec.ds
 **/xcuserdata/
 
 # Windows
+**/windows/
 **/windows/flutter/generated_plugin_registrant.cc
 **/windows/flutter/generated_plugin_registrant.h
 **/windows/flutter/generated_plugins.cmake
 
 # Linux
+**/linux/
 **/linux/flutter/generated_plugin_registrant.cc
 **/linux/flutter/generated_plugin_registrant.h
 **/linux/flutter/generated_plugins.cmake
